--- a/public/admin/css/mws-theme.css
+++ b/public/admin/css/mws-theme.css
@@ -1,7 +1,8 @@
 body, 
 #mws-container
 {
-	background-image:url('../images/core/bg/paper.png');
+	background-image:url('../images/core/bg/bgk.png');
+	background-size:100% 100%; 
 }
 
 #mws-sidebar, 
