--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -14,6 +14,9 @@ a:hover{
 }
 img{
 	border:0;
+	height: auto;
+	vertical-align: middle;
+	border: 0;
 }
 ul,li,dl,dt,dd{
 	list-style:none; margin:0; padding:0;
